--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">AgendaApp</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="vrei_sa_o_suni_pe">Vrei sa o suni pe</string>
+    <string name="vrei_sa_o_suni_pe">Doresti sa suni pe</string>
     <string name="contacts">Contacts</string>
 </resources>
