--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="vrei_sa_o_suni_pe">Doresti sa suni pe</string>
     <string name="contacts">Contacts</string>
+    <string name="recent_calls">Recent Calls</string>
 </resources>
