Added the bottom navigation view and set it up with a navigation graph. It consists of agenda and recent calls list. View model was also implemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="vrei_sa_o_suni_pe">Doresti sa suni pe</string>
     <string name="contacts">Contacts</string>
     <string name="recent_calls">Recent Calls</string>
+    <string name="title_activity_main2">MainActivity2</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
