--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="how_to_grant_permission">Please click on the button below or enable this from your settings</string>
     <string name="grant_permission_button_text">Grant Permission</string>
     <string name="read_recent_calls_permission">We need the permission to your recent calls in order to display them here.</string>
+    <string name="mobile">Mobile</string>
 
 </resources>
