Created the layout for the add new contact fragment, now i need to add the logic behind it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,8 @@
     <string name="new_name">New name</string>
     <string name="update_contact">Update Contact</string>
     <string name="add_person">add person</string>
+    <string name="add_new_contact">Add new contact</string>
+    <string name="enter_the_name_here">Enter the NAME here</string>
+    <string name="enter_the_number_here">Enter the NUMBER here</string>
 
 </resources>
