Settings fragment was created, need to create another way to handle the backpress of the button and also the actual settings file is missing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,9 @@
     <string name="no">No</string>
     <string name="yes">YES</string>
 
+    <!-- Preference Titles -->
+    <string name="language">Language</string>
+    <string name="dark_mode">Enable Dark Mode</string>
+
+
 </resources>
