--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,11 @@
 <resources>
     <string name="app_name">AgendaApp</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="toolbar_name">Agenda</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="contacts">Contacts</string>
     <string name="recent_calls">Recent Calls</string>
-    <string name="title_activity_main2">MainActivity2</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="icon_for_the_type_of_call_made">Icon for the type of call made</string>
+    <string name="icon_for_the_type_of_call_made" translatable="false">Icon for the type of call made</string>
     <string name="call_time">%1$s min</string>
     <string name="call_time_in_seconds">%1$s sec</string>
     <string name="read_contacts_permission">We need the permission to your Agenda in order to display the contacts list.</string>
@@ -25,10 +23,4 @@
     <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete %1$s?</string>
     <string name="no">No</string>
     <string name="yes">YES</string>
-
-    <!-- Preference Titles -->
-    <string name="language">Language</string>
-    <string name="dark_mode">Enable Dark Mode</string>
-
-
 </resources>
