Settings popup with Spinner implemented, need to keep track of user choice and remember it every time.

--- a/app/src/main/res/values-ro-rRO/strings.xml
+++ b/app/src/main/res/values-ro-rRO/strings.xml
@@ -22,4 +22,6 @@
     <string name="no">" Nu"</string>
     <string name="yes">Da</string>
     <string name="toolbar_name">Agendă</string>
+    <string name="language">Limbaj</string>
+    <string name="done">Gata</string>
 </resources>
