--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete %1$s?</string>
     <string name="no">No</string>
     <string name="yes">YES</string>
+    <string name="language">Language</string>
+    <string name="done">Done</string>
+
 </resources>
