--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,4 +24,7 @@
     <string name="yes">да</string>
     <string name="language">Язык</string>
     <string name="done">Сделано</string>
+    <string name="person_added_toast">Добавлен %1$s!</string>
+    <string name="error_occured_deletion">При удалении произошла ошибка!</string>
+    <string name="person_deleted">%1$s удален!</string>
 </resources>
