--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AgendaApp</string>
+    <string name="app_name">Simply contacts</string>
     <string name="toolbar_name">Agenda</string>
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="contacts">Contacts</string>
