--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="mobile">Mobile</string>
     <string name="name">Name</string>
     <string name="new_name">New name</string>
-    <string name="update_contact">Update Contact</string>
+    <string name="update_contact">Update contact</string>
     <string name="add_person">add person</string>
     <string name="add_new_contact">Add new contact</string>
     <string name="enter_the_name_here">Enter the NAME here</string>
