--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AgendaApp</string>
+    <string name="app_name">ببساطة اتصالات</string>
     <string name="toolbar_name">جدول الأعمال</string>
     <string name="contacts">جهات الاتصال</string>
     <string name="recent_calls">المكالمات الأخيرة</string>
