--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AgendaApp</string>
+    <string name="app_name">Simply Contacts</string>
     <string name="toolbar_name">Agenda</string>
     <string name="contacts">Contacts</string>
     <string name="recent_calls">Recent Calls</string>
@@ -14,7 +14,7 @@
     <string name="mobile">Mobile</string>
     <string name="name">Name</string>
     <string name="new_name">New name</string>
-    <string name="update_contact">Update Contact</string>
+    <string name="update_contact">Update contact</string>
     <string name="add_person">Add person</string>
     <string name="add_new_contact">Add new contact</string>
     <string name="enter_the_name_here">Enter the NAME here</string>
