--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -10,7 +10,7 @@
     <string name="read_contacts_permission">Wir benötigen die Berechtigung zu Ihrer Agenda, um die Kontaktliste anzeigen zu können.</string>
     <string name="how_to_grant_permission">Bitte klicken Sie auf die Schaltfläche unten oder aktivieren Sie dies in Ihren Einstellungen</string>
     <string name="grant_permission_button_text">Erlaubnis erteilen</string>
-    <string name="read_recent_calls_permission">Wir benötigen die Erlaubnis zu Ihren letzten Anrufen, um sie hier anzeigen zu können.</string>
+    <string name="read_recent_calls_permission">Die App muss der Standardtelefonhandler sein, um das Anrufprotokoll anzuzeigen.</string>
     <string name="mobile">Mobil</string>
     <string name="name">Name</string>
     <string name="new_name">Neuer Name</string>
