--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -10,7 +10,7 @@
     <string name="read_contacts_permission">Nous avons besoin de l\'autorisation de votre Agenda afin d\'afficher la liste des contacts.</string>
     <string name="how_to_grant_permission">Veuillez cliquer sur le bouton ci-dessous ou l\'activer à partir de vos paramètres</string>
     <string name="grant_permission_button_text">Donner la permission</string>
-    <string name="read_recent_calls_permission">Nous avons besoin de l\'autorisation pour vos appels récents afin de les afficher ici.</string>
+    <string name="read_recent_calls_permission">L\'application doit être le gestionnaire de téléphone par défaut pour afficher le journal des appels.</string>
     <string name="mobile">Mobile</string>
     <string name="name">Nom</string>
     <string name="new_name">Nouveau nom</string>
