--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -10,7 +10,7 @@
     <string name="read_contacts_permission">Per visualizzare l\'elenco dei contatti è necessario ottenere l\'autorizzazione dell\'Agenda.</string>
     <string name="how_to_grant_permission">Fare clic sul pulsante qui sotto o attivarlo dalle impostazioni.</string>
     <string name="grant_permission_button_text">Concessione del permesso</string>
-    <string name="read_recent_calls_permission">Abbiamo bisogno dell\'autorizzazione alle chiamate recenti per poterle visualizzare qui.</string>
+    <string name="read_recent_calls_permission">L\'app deve essere il gestore telefonico predefinito per mostrare il registro delle chiamate.</string>
     <string name="mobile">Mobile</string>
     <string name="name">Nome</string>
     <string name="new_name">Nuovo nome</string>
