--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -10,7 +10,7 @@
     <string name="read_contacts_permission">Precisamos da permissão para a sua Agenda a fim de exibir a lista de contactos.</string>
     <string name="how_to_grant_permission">Por favor clique no botão abaixo ou active-o a partir das suas definições</string>
     <string name="grant_permission_button_text">Permissão de concessão</string>
-    <string name="read_recent_calls_permission">Precisamos da permissão para as suas chamadas recentes a fim de as exibir aqui.</string>
+    <string name="read_recent_calls_permission">O aplicativo precisa ser o manipulador de telefone padrão para mostrar o registro de chamadas.</string>
     <string name="mobile">Móvel</string>
     <string name="name">Nome</string>
     <string name="new_name">Novo nome</string>
