--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,7 +10,7 @@
     <string name="read_contacts_permission">Нам нужно разрешение на вашу повестку дня, чтобы отобразить список контактов.</string>
     <string name="how_to_grant_permission">Пожалуйста, нажмите на кнопку ниже или включите это в своих настройках</string>
     <string name="grant_permission_button_text">Предоставить разрешение</string>
-    <string name="read_recent_calls_permission">Нам нужно разрешение на ваши недавние звонки, чтобы отобразить их здесь.</string>
+    <string name="read_recent_calls_permission">Приложение должно быть обработчиком звонков по умолчанию, чтобы отображать журнал вызовов.</string>
     <string name="mobile">Мобильный</string>
     <string name="name">Имя</string>
     <string name="new_name">Новое имя</string>
