--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -10,7 +10,7 @@
     <string name="read_contacts_permission">我们需要你的议程的权限，以便显示联系人名单。</string>
     <string name="how_to_grant_permission">请点击下面的按钮或从你的设置中启用该功能。</string>
     <string name="grant_permission_button_text">授权许可</string>
-    <string name="read_recent_calls_permission">我们需要您的许可，以便在这里显示您最近的电话。</string>
+    <string name="read_recent_calls_permission">应用程序需要是默认的电话处理程序，以显示</string>
     <string name="mobile">手机</string>
     <string name="name">命名</string>
     <string name="new_name">新名称</string>
