--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="read_contacts_permission">We need the permission to your Agenda in order to display the contacts list.</string>
     <string name="how_to_grant_permission">Please click on the button below or enable this from your settings</string>
     <string name="grant_permission_button_text">Grant Permission</string>
-    <string name="read_recent_calls_permission">We need the permission to your recent calls in order to display them here.</string>
+    <string name="read_recent_calls_permission">The app needs to be the default phone handler to in order to show the call log.</string>
     <string name="mobile">Mobile</string>
     <string name="name">Name</string>
     <string name="new_name">New name</string>
