--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -27,4 +27,8 @@
     <string name="person_added_toast">تمت إضافة  %1$s !</string>
     <string name="error_occured_deletion">حدث خطأ أثناء الحذف!</string>
     <string name="person_deleted">%1$s تم الحذف</string>
+    <string name="enter_name_error">الرجاء إدخال اسم</string>
+    <string name="enter_number_error">الرجاء إدخال رقم</string>
+    <string name="number_updated">الرقم محدث</string>
+    <string name="name_updated">الاسم محدث</string>
 </resources>
