--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -27,4 +27,8 @@
     <string name="person_added_toast">%1$s added!</string>
     <string name="error_occured_deletion">An error occurred during deletion!</string>
     <string name="person_deleted">%1$s deleted!</string>
+    <string name="enter_name_error">Please enter a name</string>
+    <string name="enter_number_error">Please enter a number</string>
+    <string name="number_updated">Number updated</string>
+    <string name="name_updated">Name updated</string>
 </resources>
