--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -27,4 +27,8 @@
     <string name="person_added_toast">%1$s जोड़े गए!</string>
     <string name="error_occured_deletion">हटाते समय एक त्रुटि हुई!</string>
     <string name="person_deleted">%1$s हटा दिए गए!</string>
+    <string name="enter_name_error">कृपया एक नाम दर्ज करें</string>
+    <string name="enter_number_error">कृपया एक नंबर दर्ज करें</string>
+    <string name="number_updated">नंबर अपडेट किया गया</string>
+    <string name="name_updated">नाम अपडेट किया गया</string>
 </resources>
