--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -31,4 +31,5 @@
     <string name="enter_number_error">Veuillez entrer un numéro</string>
     <string name="number_updated">Numéro mis à jour</string>
     <string name="name_updated">Nom mis à jour</string>
+    <string name="favorites_text">Favoris</string>
 </resources>
