--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -31,4 +31,5 @@
     <string name="enter_number_error">Introduza um número</string>
     <string name="number_updated">Número actualizado</string>
     <string name="name_updated">Nome actualizado</string>
+    <string name="favorites_text">Favoritos</string>
 </resources>
